# brotli-c-autotool

c/: Makefile.am  bootstrap.sh  configure.ac
c/common/: Makefile.am
c/dec/: Makefile.am
c/enc/: Makefile.am
c/tools/: Makefile.am
