AC_PREREQ(2.57)

AC_INIT([brotli], m4_include([VERSION]), [https://groups.google.com/forum/#!forum/brotli])

AM_INIT_AUTOMAKE()
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
LT_INIT

AC_BROTLI_SET_VERSIONS([BROTLI_VERSION_MAJOR], [BROTLI_VERSION_MINOR], [BROTLI_VERSION_PATCH])
AC_BROTLI_SET_ABI_NUMBERS([BROTLI_ABI_CURRENT], [BROTLI_ABI_REVISION], [BROTLI_ABI_AGE])

AC_SUBST([BROTLI_VERSION_MAJOR])
AC_SUBST([BROTLI_VERSION_MINOR])
AC_SUBST([BROTLI_VERSION_PATCH])

AC_SUBST([BROTLI_ABI_CURRENT])
AC_SUBST([BROTLI_ABI_REVISION])
AC_SUBST([BROTLI_ABI_AGE])

LIBBROTLI_VERSION_INFO="-version-info ${BROTLI_ABI_CURRENT}:${BROTLI_ABI_REVISION}:${BROTLI_ABI_AGE}"
AC_SUBST([LIBBROTLI_VERSION_INFO])


LIBMATH_LOG2=
AC_CHECK_FUNCS([log2],[
  AC_DEFINE([HAVE_LOG2])
],[
  AC_SEARCH_LIBS([log2], [m math sunmath], [AC_DEFINE([HAVE_LOG2])])
])

AC_CONFIG_HEADERS([common/config.h])
AC_CONFIG_FILES([Makefile common/Makefile dec/Makefile enc/Makefile tools/Makefile])

AC_OUTPUT
